done with Overview, need actual values and styling

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -557,6 +557,7 @@ brief_description=Brief Description
 brief_description_explanatory=Enter tweet-length (140 characters or less) description of this case
 case_description_instructional=The following standard structure makes it easier to compare and analyze entries. Please use the headings below and refer to our guidelines as you prepare your case entry.
 links_placeholder=Add a link
+overview=Overview
 voting=Voting Method
 facetoface_not_specified=Not specified
 facetoface_facetoface=Face-to-face
@@ -1092,8 +1093,8 @@ organization_title_label=Title of Organization
 organization_title_instructional=Enter title
 organization_body_title=Description of the organization
 tags_title=Tags
-tags_prompt=Type to search for an existing tag
-tags_instructional=Enter a tag
+tags_prompt=Select tags that best describe this case.
+tags_placeholder=Enter a tag
 unknown_title_label=Unknown
 unknown_title_instructional=Unknown
 unknown_body_title=Unknown
