--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -557,6 +557,7 @@ brief_description=Brief Description
 brief_description_explanatory=Enter tweet-length (140 characters or less) description of this case
 case_description_instructional=The following standard structure makes it easier to compare and analyze entries. Please use the headings below and refer to our guidelines as you prepare your case entry.
 links_placeholder=Add a link
+primary_location=Primary location
 overview=Overview
 voting=Voting Method
 facetoface_not_specified=Not specified
