done with 2.Location, need actual values and styling

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -551,6 +551,7 @@ add_a_dataset=Add a Data Set
 sorry_upload=Sorry, upload only works if you're logged in.
 change=Change
 #CaseEditor.js
+overview=Overview
 country_picker=Location
 not_specified=Not specified
 brief_description=Brief Description
@@ -558,7 +559,9 @@ brief_description_explanatory=Enter tweet-length (140 characters or less) descri
 case_description_instructional=The following standard structure makes it easier to compare and analyze entries. Please use the headings below and refer to our guidelines as you prepare your case entry.
 links_placeholder=Add a link
 primary_location=Primary location
-overview=Overview
+primary_location_instructional=Type to select an address, city or country where the primary case activities occurred. List any additional locations in the case narrative under "Originating Entities and Funding". You may also want to create separate case components for the locations of other case activities.
+influence_scope=Scope of influence
+influence_scope_instructional=What is the geographical or jurisdictional scope of this case?
 voting=Voting Method
 facetoface_not_specified=Not specified
 facetoface_facetoface=Face-to-face
