--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -593,8 +593,8 @@ end_date_instructional=Select an end date, if applicable
 ongoing=Ongoing
 videos=Videos
 photos=Photos
-photos_instructional=Select a photo from your device
-videos_instructional=Add a video (Vimeo, YouTube)
+photos_instructional=Select a photo from your device.
+videos_instructional=Add a video link from Vimeo or YouTube.
 links_instructional=If there is a main website for this case, enter it here. Add links to additional sources so that readers and editors can find more information about this case online. 
 links_instructional_1=Enter a link and press +
 targeted_participant_demographic=Targeted participant demographic
