done with 4.Date & Duration, need actual values and styling

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -560,6 +560,10 @@ case_description_instructional=The following standard structure makes it easier 
 links_placeholder=Add a link
 primary_location=Primary location
 primary_location_instructional=Type to select an address, city or country where the primary case activities occurred. List any additional locations in the case narrative under "Originating Entities and Funding". You may also want to create separate case components for the locations of other case activities.
+##4. Date & Duration
+ongoing_label=This case is ongoing 
+time_limited=Time limited
+time_limited_instructional=Did this case take place over a single, defined period of days, weeks or months? Or was the entire process repeated over time? Select one.
 influence_scope=Scope of influence
 influence_scope_instructional=What is the geographical or jurisdictional scope of this case?
 voting=Voting Method
@@ -586,6 +590,7 @@ who_was_primarily_responsible_for_organizing_the_initiative=Who was primarily re
 number_of_meeting_days=Number of meeting days
 number_of_meeting_days_instructional=Enter number of meeting days
 date=Date
+date_duration=Date & Duration
 start_date=Start date
 start_date_instructional=Select a start date or date of single event
 end_date=End date
@@ -595,6 +600,7 @@ videos=Videos
 photos=Photos
 photos_instructional=Select a photo from your device.
 videos_instructional=Add a video link from Vimeo or YouTube.
+videos_placeholder=Add a video link from Vimeo or YouTube.
 links_instructional=If there is a main website for this case, enter it here. Add links to additional sources so that readers and editors can find more information about this case online. 
 links_instructional_1=Enter a link and press +
 targeted_participant_demographic=Targeted participant demographic
