done with 5.Purpose & Approach, need actual values and styling

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -564,6 +564,14 @@ primary_location_instructional=Type to select an address, city or country where 
 ongoing_label=This case is ongoing 
 time_limited=Time limited
 time_limited_instructional=Did this case take place over a single, defined period of days, weeks or months? Or was the entire process repeated over time? Select one.
+##5. Purpose & Approach
+purpose_approach=Purpose & Approach
+purpose=Purpose
+purpose_instructional=Select and rank up to three purposes, with “1” indicating the most relevant.
+approach=Approach
+approach_instructional=Select and rank up to three approaches, with “1” indicating the most relevant.
+public_spectrum=Spectrum of Public Participation
+public_spectrum_instructional=Which type of goal from the <a href="https://iap2usa.org/resources/Documents/Core%20Values%20Awards/IAP2%20-%20Spectrum%20-%20stand%20alone%20document.pdf">IAP2 Spectrum of Public Participation</a> does this case best represent?
 influence_scope=Scope of influence
 influence_scope_instructional=What is the geographical or jurisdictional scope of this case?
 voting=Voting Method
