--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -572,6 +572,8 @@ approach=Approach
 approach_instructional=Select and rank up to three approaches, with “1” indicating the most relevant.
 public_spectrum=Spectrum of Public Participation
 public_spectrum_instructional=Which type of goal from the <a href="https://iap2usa.org/resources/Documents/Core%20Values%20Awards/IAP2%20-%20Spectrum%20-%20stand%20alone%20document.pdf">IAP2 Spectrum of Public Participation</a> does this case best represent?
+##6.Participants
+participants=Participants
 influence_scope=Scope of influence
 influence_scope_instructional=What is the geographical or jurisdictional scope of this case?
 voting=Voting Method
