done with 7.Process, need actual values and styling

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -582,6 +582,29 @@ recruitment_method=Recruitment method
 recruitment_method_instructional=If relevant to this case, select the method used to recruit a limited subset of the population
 targeted_participants=Targeted Participants 
 targeted_participants_instructional=Select up to three of the most heavily recruited groups.
+##7.Process
+process=Process
+process_methods=Methods
+process_methods_prompt=What methods were used in this case? Type to select methods that already exist in Participedia.
+legality=Legality
+legality_instructional=Is the overall method used in this case considered legal by judicial authorities?
+facilitators=Facilitators
+facilitators_instructional=Did facilitators help guide part or all of this case?
+facilitator_training=Facilitator training
+facilitator_training_instructional=If yes, were they…
+participants_interaction=Type(s) of Interaction among participants
+participants_interaction_instructional=Select and rank up to three types of interactions in order of relevance, with with “1” indicating the most often used form of interaction.
+learning_resources=Information and Learning Resources
+learning_resources_instructional=What type(s) of background information were provided for participants?”
+if_voting=If Voting
+if_voting_instructional=What voting method(s) were used by participants?
+decision_method_case=Decision Method(s)
+decision_method_case_instructional=How did participants in this case make group decisions?
+insights_outcomes=Communication of Insights and Outcomes
+insights_outcomes_instructional=Select up to three ways that insights and outcomes from this case were communicated to the intended audiences.
+
+
+
 influence_scope=Scope of influence
 influence_scope_instructional=What is the geographical or jurisdictional scope of this case?
 voting=Voting Method
@@ -647,7 +670,7 @@ communication_with_audience_instructional=Select a communication with audience
 decision_method=Decision method
 decision_method_instructional=Select a decision method
 face_to_face_online_or_both=Face-to-face, online or both
-facetoface_online_or_both_instructional=Select face-to-face, online or both
+facetoface_online_or_both_instructional=Did participants interact face-to-face, online, or both?
 facilitated=Facilitated
 communication_mode=Communication Mode
 communication_mode_instructional=Select a communication mode
