--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -602,7 +602,12 @@ decision_method_case=Decision Method(s)
 decision_method_case_instructional=How did participants in this case make group decisions?
 insights_outcomes=Communication of Insights and Outcomes
 insights_outcomes_instructional=Select up to three ways that insights and outcomes from this case were communicated to the intended audiences.
-
+##8.Organizers & Supporters
+organizers_supporters=Organizers & Supporters
+primary_organizer=Primary organizer / manager
+primary_organizer_instructional=Who was primarily responsible for organizing / managing the initiative? Type to select name of any organization that already exists on Participedia.
+organizer_type=Type of organizer / manager
+organizer_type_instructional=Select up to three types of organizers or managers.
 
 
 influence_scope=Scope of influence
