done with 8.Organizers & Supporters, need actual values and styling

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -608,7 +608,8 @@ primary_organizer=Primary organizer / manager
 primary_organizer_instructional=Who was primarily responsible for organizing / managing the initiative? Type to select name of any organization that already exists on Participedia.
 organizer_type=Type of organizer / manager
 organizer_type_instructional=Select up to three types of organizers or managers.
-
+##9.Resources
+funder_label=Funder
 
 influence_scope=Scope of influence
 influence_scope_instructional=What is the geographical or jurisdictional scope of this case?
