done with 9.Resources, need actual values and styling

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -610,6 +610,13 @@ organizer_type=Type of organizer / manager
 organizer_type_instructional=Select up to three types of organizers or managers.
 ##9.Resources
 funder_label=Funder
+funder_instructional=Who funded this case of public participation? Provide names of the organizations, government agencies, or individuals who paid for this initiative.
+funder_type=Type of funder
+funder_type_instructional=Select up to three types of funders.
+staff=Staff
+staff_instructional=Were any paid staff or consultants involved in this case?
+volunteers=Volunteers
+volunteers_instructional=Did unpaid volunteers help implement this case?
 
 influence_scope=Scope of influence
 influence_scope_instructional=What is the geographical or jurisdictional scope of this case?
