added all placeholders

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -556,78 +556,108 @@ country_picker=Location
 not_specified=Not specified
 brief_description=Brief Description
 brief_description_explanatory=Enter tweet-length (140 characters or less) description of this case
+brief_description_placeholder=Enter tweet-length (140 characters or less) description of this case
 case_description_instructional=The following standard structure makes it easier to compare and analyze entries. Please use the headings below and refer to our guidelines as you prepare your case entry.
 links_placeholder=Add a link
 primary_location=Primary location
 primary_location_instructional=Type to select an address, city or country where the primary case activities occurred. List any additional locations in the case narrative under "Originating Entities and Funding". You may also want to create separate case components for the locations of other case activities.
+primary_location_placeholder=Type to search for a known location
 ##4. Date & Duration
 ongoing_label=This case is ongoing 
 time_limited=Time limited
 time_limited_instructional=Did this case take place over a single, defined period of days, weeks or months? Or was the entire process repeated over time? Select one.
+time_limited_placeholder=Was this time limited, or repeated?
 ##5. Purpose & Approach
-purpose_approach=Purpose & Approach
+purpose_approach=Purpose/Goal
 purpose=Purpose
 purpose_instructional=Select and rank up to three purposes, with “1” indicating the most relevant.
+purpose_placeholder=Select & rank up to 3 purposes/goals
 approach=Approach
 approach_instructional=Select and rank up to three approaches, with “1” indicating the most relevant.
+approach_placeholder=Select & rank up to 3 approaches
 public_spectrum=Spectrum of Public Participation
 public_spectrum_instructional=Which type of goal from the <a href="https://iap2usa.org/resources/Documents/Core%20Values%20Awards/IAP2%20-%20Spectrum%20-%20stand%20alone%20document.pdf">IAP2 Spectrum of Public Participation</a> does this case best represent?
+public_spectrum_placeholder=Select 1 goal
 ##6.Participants
 participants=Participants
-participants_number=Total number of participants
-participants_number_instructional=Roughly how many people participated? 
+number_of_participants=Total number of participants
+number_of_participants=Total number of participants
+number_of_participants_instructional=Roughly how many people participated? 
+number_of_participants_placeholder=How many people participated?
 open_limited=Open to all or limited to some?
 open_limited_instructional=Was this open to all or limited to a subset of the population?
-recruitment_method=Recruitment method
+open_limited_placeholder=Was this open to all or limited to a subset of the population?
+recruitment_method=Recruitment Method
 recruitment_method_instructional=If relevant to this case, select the method used to recruit a limited subset of the population
+recruitment_method_placeholder=Select recruitment method
 targeted_participants=Targeted Participants 
 targeted_participants_instructional=Select up to three of the most heavily recruited groups.
+targeted_participants_placeholder=Identify up to 3 recruited groups
 ##7.Process
 process=Process
 process_methods=Methods
-process_methods_instructional=What methods were used in this case? Type to select methods that already exist in Participedia.
+process_methods_instructional=What methods were used in this case? Type to select methods that already exist in Participedia. For new methods, first publish this case to save your work then publish a new method. To add your new method, return to edit this case.
+process_methods_placeholder=Type to search & generate possible database matches
 legality=Legality
 legality_instructional=Is the overall method used in this case considered legal by judicial authorities?
+legality_placeholder=Was this considered legal?
 facilitators=Facilitators
 facilitators_instructional=Did facilitators help guide part or all of this case?
+facilitators_placeholder=Did facilitators help guide participants?
 facilitator_training=Facilitator training
 facilitator_training_instructional=If yes, were they…
+facilitator_training_placeholder=Did facilitators help guide participants?
 participants_interaction=Type(s) of Interaction among participants
 participants_interaction_instructional=Select and rank up to three types of interactions in order of relevance, with with “1” indicating the most often used form of interaction.
+participants_interaction_placeholder=Select & rank up to 3 types of interaction
 learning_resources=Information and Learning Resources
 learning_resources_instructional=What type(s) of background information were provided for participants?”
+learning_resources_placeholder=Identify information (if any) provided
 if_voting=If Voting
 if_voting_instructional=What voting method(s) were used by participants?
-decision_method_case=Decision Method(s)
-decision_method_case_instructional=How did participants in this case make group decisions?
+if_voting_placeholder=What voting methods were used?
+decision_methods=Decision Method(s)
+decision_methods_instructional=How did participants in this case make group decisions?
+decision_methods_placeholder=How were group decisions made?
 insights_outcomes=Communication of Insights and Outcomes
 insights_outcomes_instructional=Select up to three ways that insights and outcomes from this case were communicated to the intended audiences.
+insights_outcomes_placeholder=How were insights & outcomes communicated?
 ##8.Organizers & Supporters
 organizers_supporters=Organizers & Supporters
 primary_organizer=Primary organizer / manager
-primary_organizer_instructional=Who was primarily responsible for organizing / managing the initiative? Type to select name of any organization that already exists on Participedia.
-organizer_type=Type of organizer / manager
-organizer_type_instructional=Select up to three types of organizers or managers.
+primary_organizer_instructional=Who was primarily responsible for organizing / managing the initiative? Type to select name of any organization that already exists on Participedia. For new organizations, first publish this case to save your work then publish a new organization. To add your new organization, return to edit this case.
+primary_organizer_placeholder=Type to search & generate possible database matches
+organizer_types=Type of organizer / manager
+organizer_types_instructional=Select up to three types of organizers or managers.
+organizer_types_placeholder=Select up to three types of organizers or managers
 ##9.Resources
 funder_label=Funder
 funder_instructional=Who funded this case of public participation? Provide names of the organizations, government agencies, or individuals who paid for this initiative.
-funder_type=Type of funder
-funder_type_instructional=Select up to three types of funders.
+funder_types=Type of funder
+funder_types_instructional=Select up to three types of funders.
+funder_types_placeholder=Select up to three types of funders
 staff=Staff
 staff_instructional=Were any paid staff or consultants involved in this case?
+staff_placeholder=Were paid staff or consultants invovled?
 volunteers=Volunteers
 volunteers_instructional=Did unpaid volunteers help implement this case?
+volunteers_placeholder=Were unpaid volunteers involved?
 ##10.Evidence of Impact
 impact_evidence=Evidence of Impact
 impact_evidence_instructional=Did this initiative contribute to social and/or political change?
-changes_type=Types of Change
-changes_type_instructional=Select and rank up to five types of change to which this case contributed, in order of relevance, with “1” being the most relevant type of change.
-change_implementers=Implementers of Change
-change_implementers_instructional=Select up to three types of actors who played roles in implementing ideas that emerged from this initiative.
+impact_evidence_placeholder=Did this work contribute to social or political change?
+changes_types=Types of Change
+changes_types_instructional=Select and rank up to five types of change to which this case contributed, in order of relevance, with “1” being the most relevant type of change.
+changes_types_placeholder=Select & rank up to 5 types of change to which this case contributed.
+implementers_of_change=Implementers of Change
+implementers_of_change_instructional=Select up to three types of actors who played roles in implementing ideas that emerged from this initiative.
+implementers_of_change_placeholder=Select up to 3 types of implementers of change
 formal_evaluation=Formal Evaluation
 formal_evaluation_instructional=Was a formal evaluation of this initiative conducted?
-influence_scope=Scope of influence
-influence_scope_instructional=What is the geographical or jurisdictional scope of this case?
+formal_evaluation_placeholder=Was there a formal evaluation of this case?
+scope_of_influence=Scope of influence
+scope_of_influence_instructional=What is the geographical or jurisdictional scope of this case?
+scope_of_influence_placeholder=Select geographic or jurisdictional scope
 facetoface_not_specified=Not specified
 facetoface_facetoface=Face-to-face
 facetoface_online=Online
@@ -641,7 +671,7 @@ consensus=Consensus
 specific_topic=Specific topic
 voting=Voting
 facetoface_online_or_both=Face-to-face, online or both
-issue=Issue
+issues=Issue
 general_issues=General Issues
 who_was_primarily_responsible_for_organizing_the_initiative=Who was primarily responsible for organizing the initiative
 number_of_meeting_days=Number of meeting days
@@ -650,16 +680,18 @@ date=Date
 date_duration=Date & Duration
 start_date=Start date
 start_date_instructional=Select a start date or date of single event
+start_date_placeholder=Select a start date or date of single event
 end_date=End date
 end_date_instructional=Select an end date, if applicable
+end_date_placeholder=Select an end date, if applicable
 ongoing=Ongoing
 videos=Videos
 photos=Photos
 files=Files
 files_instructional=Upload relevant documents here.
 photos_instructional=Select a photo from your device.
-videos_instructional=Add a video link from Vimeo or YouTube.
-videos_placeholder=Add a video link from Vimeo or YouTube.
+videos_instructional=Add a video link (Vimeo or YouTube)
+videos_placeholder=Add a video link (Vimeo or YouTube)
 links_instructional=If there is a main website for this case, enter it here. Add links to additional sources so that readers and editors can find more information about this case online. 
 links_instructional_1=Enter a link and press +
 targeted_participant_demographic=Targeted participant demographic
@@ -679,7 +711,8 @@ staff_type_instructional=Enter staff type
 who_else_supported_the_initiative=Who else supported the initiative
 who_else_supported_the_initiative_instructional=Enter who else supported the initiative
 general_issues_instructional=Select an issue
-issue_instructional=Select an issue
+issues_instructional=Select an issue
+issues_placeholder=Select & rank up to 3 issues
 #Method.js
 kind_of_influence=Kind of influence
 kind_of_influence_instructional=Select kind of influence
@@ -689,6 +722,7 @@ decision_method=Decision method
 decision_method_instructional=Select a decision method
 face_to_face_online_or_both=Face-to-face, online or both
 facetoface_online_or_both_instructional=Did participants interact face-to-face, online, or both?
+facetoface_online_or_both_placeholder=Was interaction face-to-face or online?
 facilitated=Facilitated
 communication_mode=Communication Mode
 communication_mode_instructional=Select a communication mode
@@ -708,8 +742,9 @@ executive_director_instructional=Enter Executive Director
 strawberry=Strawberry
 chocolate=Chocolate
 vanilla=Vanilla
-relationship=Relationship
-relationship_instructional=Select and rank up to three ways you are related to this case, in order of relevance, with (1) being your primary relationship to the case.
+relationships=Relationship
+relationships_instructional=Select and rank up to three ways you are related to this case, in order of relevance, with (1) being your primary relationship to the case.
+relationships_placeholder=Select & rank up to 3 items
 war=War
 peace=Peace
 community_development=Community Development
@@ -1153,7 +1188,7 @@ mention_participatory_budgeting=Mention "Participatory Budgeting"
 tag_infrastructure=Tagged as: Infrastructure
 case_title_label=Title of Case
 case_title_explanatory=Give this public participation project or event a descriptive title in <b>10 words or less</b>. For example, “Brazilian Dialogue on Diversity" or "New York City Public Issues Forum."
-case_title_exp_text=Please give this case a descriptive title in 15 words or less. For example, “Brazilian Dialogue on Diversity" or "New York City Public Issues Forum."
+case_title_placeholder=Enter title in 10 words or less.
 case_body_title=Case Description/Narrative
 method_title_label=Title of Method
 method_title_instructional=Enter title
@@ -1163,7 +1198,7 @@ organization_title_instructional=Enter title
 organization_body_title=Description of the organization
 tags_title=Tags
 tags_instructional=Select tags that best describe this case.
-tags_placeholder=Enter a tag
+tags_placeholder=Enter one or more tags
 unknown_title_label=Unknown
 unknown_title_instructional=Unknown
 unknown_body_title=Unknown
@@ -1609,8 +1644,9 @@ page=page
 pages=pages
 of=of
 data=Data
-specific_topic=Specific Topic
-specific_topic_instructional=Rank order up to three of the most relevant, specific topics, with “1” indicating the most relevant topic.
+specific_topics=Specific Topic
+specific_topics_instructional=Rank order up to three of the most relevant, specific topics, with “1” indicating the most relevant topic.
+specific_topics_placeholder=Select & rank up to 3 sub-topics
 tags=Tags
 case_description_placeholder=<p>The following standard structure makes it easier to compare and analyze entries.</p><p>We recommend you use the headings below and refer to our guidelines as you prepare your case entry.</p><p>To view the guidelines, copy and paste this URL into your browser: <a href="https://goo.gl/V2SHQn">https://goo.gl/V2SHQn</a></p>
 searchmatched=This matched your search.
@@ -1793,14 +1829,21 @@ funder_box_title=Funder
 funder_box_text=Provide additional information about funders of the initiative in the 'Originating Entities and Funding' section of the case narrative.
 changes_type_box_title=Types of Change
 changes_type_box_text=Provide additional detail in the "Influence, Outcomes, and Effects" section of the case narrative.
-add_components_box_title=Add components to this case
-add_components_box_text=If you can’t find the case you are looking for, please publish your current work, then use quick submit to publish the case you want to add as a component. Once your new case is published, return to this form to label it as a component of this case.
-make_component_box_title=Make this case a component of another case
-make_component_box_text=If you can’t find the case you are looking for, please publish your current work, then use quick submit to publish the case you want to label this case as a component of. Once your new case is published, return to this form and label this case as a component of your new case.
+has_components_box_title=Add components to this case
+has_components_box_text=If you can’t find the case you are looking for, please publish your current work, then use quick submit to publish the case you want to add as a component. Once your new case is published, return to this form to label it as a component of this case.
+is_component_of_box_title=Make this case a component of another case
+is_component_of_box_text=If you can’t find the case you are looking for, please publish your current work, then use quick submit to publish the case you want to label this case as a component of. Once your new case is published, return to this form and label this case as a component of your new case.
+evaluation_reports=Evaluation Reports
+evaluation_links=Evaluation Links
+evaluation_links_prompt=Add a link
+evaluation_links_instructional=Provide links to evaluation reports here. 
+evaluation_links_placeholder=Provide a link to a evaluation report here. 
 #Components
 components=Components
 components_intro=Some cases of public participation can be viewed as “components” of a single, overarching case. Any case can have multiple components, but can only be labeled as a component of a single case. 
-add_components=Add components to this case
-add_components_instructional=A case can have multiple components, but they must already be published cases on Participedia. Type to search for an existing case in Participedia to label it as a component of this case. Select one or more.
-make_component=Make this case a component of another case
-make_component_instructional=A case can only be a component of one other case, and the other case must already be published on Participedia. Type to search for an existing case in Participedia to label this case as a component of it. Select one. 
+has_components=Add components to this case
+has_components_instructional=A case can have multiple components, but they must already be published cases on Participedia. Type to search for an existing case in Participedia to label it as a component of this case. Select one or more.
+has_components_placeholder=Search for existing case/component
+is_component_of=Make this case a component of another case
+is_component_of_instructional=A case can only be a component of one other case, and the other case must already be published on Participedia. Type to search for an existing case in Participedia to label this case as a component of it. Select one. 
+is_component_of_placeholder=Search for existing case/component
