method editor in progress

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -690,8 +690,10 @@ photos=Photos
 files=Files
 files_instructional=Upload relevant documents here.
 photos_instructional=Select a photo from your device.
-videos_instructional=Add a video link (Vimeo or YouTube)
-videos_placeholder=Add a video link (Vimeo or YouTube)
+videos_instructional_case=Add a video link from Vimeo or YouTube.
+videos_instructional_method=Add a video link from Vimeo or YouTube.
+videos_placeholder_case=Add a video link (Vimeo or YouTube)
+videos_placeholder_method=Add a video link (Vimeo or YouTube)
 links_instructional=If there is a main website for this case, enter it here. Add links to additional sources so that readers and editors can find more information about this case online. 
 links_instructional_1=Enter a link and press +
 targeted_participant_demographic=Targeted participant demographic
@@ -701,7 +703,8 @@ targeted_participants_public_role_instructional=Select targeted participants pub
 targeted_audience=Targeted audience
 targeted_audience_instructional=Select targeted audience
 participant_selection=Participant selection
-participant_selection_instructional=Select participant selection
+participant_selection_instructional=How are participants typically recruited?
+participant_selection_placeholder=Select recruitment method
 type_of_funding_entity=Type of funding entity
 type_of_funding_entity_instructional=Select type of funding entity
 updated_date=Updated date
@@ -715,7 +718,8 @@ issues_instructional=Select an issue
 issues_placeholder=Select & rank up to 3 issues
 #Method.js
 kind_of_influence=Kind of influence
-kind_of_influence_instructional=Select kind of influence
+kind_of_influence_instructional=What kind of decision making influence does this method typically have?
+kind_of_influence_placeholder=Select kind of influence
 communication_with_audience=Communication with audience
 communication_with_audience_instructional=Select a communication with audience
 decision_method=Decision method
@@ -725,7 +729,8 @@ facetoface_online_or_both_instructional=Did participants interact face-to-face, 
 facetoface_online_or_both_placeholder=Was interaction face-to-face or online?
 facilitated=Facilitated
 communication_mode=Communication Mode
-communication_mode_instructional=Select a communication mode
+communication_mode_instructional=What is the primary purpose of communication within the process? 
+communication_mode_placeholder=Select communication mode
 governance_contribution=Governance contribution
 typical_funding_source=Typical funding source
 typical_funding_source_instructional=Select typical funding source
@@ -1190,14 +1195,54 @@ case_title_label=Title of Case
 case_title_explanatory=Give this public participation project or event a descriptive title in <b>10 words or less</b>. For example, “Brazilian Dialogue on Diversity" or "New York City Public Issues Forum."
 case_title_placeholder=Enter title in 10 words or less.
 case_body_title=Case Description/Narrative
+tags_instructional_case=Select tags that best describe this case.
+##MethodEditor.js
 method_title_label=Title of Method
-method_title_instructional=Enter title
-method_body_title=Method description
+method_title_explanatory=Give this method a descriptive title in 10 words or less.
+method_body_title=Method Description / Narrative
+method_title_placeholder=Enter title in 10 words or less
+method_brief_description_explanatory=Enter tweet-length (280 characters or less) description of this method.
+method_brief_description_placeholder=Enter tweet-length case description
+method_description_instructional=The following standard structure makes it easier to compare and analyze entries. Please use the headings below as you prepare your method entry. 
+method_description_placeholder=<h3>Definition</h3><h3>Problems and Purpose</h3><h3>History</h3><h3>Participant Selection</h3><h3>Deliberation, Decisions, and Public Interaction</h3><h3>Influence, Outcomes, and Effects</h3><h3>Analysis and Lessons Learned</h3><h3>Secondary Sources</h3><h3>External Links</h3><h3>Notes</h3>
+links_instructional_method=Add links to additional sources so that readers and editors can find more information about this method online.
+tags_instructional_method=Select tags that best describe this method.
+basic_info=Basic Info
+minimum_participants=Minimum Participants 
+minimum_participants_instructional=Enter the minimum number of participants required to use this method.
+minimum_participants_placeholder=Minimum number of participants
+maximum_participants=Maximum Participants
+maximum_participants_instructional=Enter the maximum number of participants required to use this method.
+maximum_participants_placeholder=Maximum number of participants
+minimum_duration=Minimum Duration 
+minimum_duration_instructional=Enter the minimum number of days required to use this method.
+minimum_duration_placeholder=Minumum number of days
+maximum_duration=Maximum Duration 
+maximum_duration_instructional=Enter the maximum number of days required to use this method.
+maximum_duration_placeholder=Maximum number of days
+minimum_cost=Minimum Cost 
+minimum_cost_instructional=Enter the minimum cost in US dollars required to use this method.
+minimum_cost_placeholder=Minimum cost in USD
+maximum_cost=Maximum Cost 
+maximum_cost_instructional=Enter the maximum cost in US dollars required to use this method.
+maximum_cost_placeholder=Maximum cost in USD
+facilitated_label=Is this method typically facilitated?
+classification=Classification
+consultation_ie_to_advise_decision_makers=Consultation (i.e. to advise decision makers)
+cogovernance_ie_to_share_decision_making_with_public_authorities=Co-governance (i.e. to share decision making with public authorities)
+make_public_decisions_ie_exert_direct_authority=Make public decisions (i.e. exert direct authority)
+participant_selection=Participant Selection 
+open_to_all=Open to all
+open_to_all_with_targeted_recruitment=Open to all with targeted recruitment
+random_selection=Random selection
+no_interaction_among_participants=No interaction among participants
+discussion_dialogue_or_deliberation=Discussion, dialogue or deliberation
+negotiate_bargain=Negotiate & bargain
+##OrganizationEditor.js
 organization_title_label=Title of Organization
 organization_title_instructional=Enter title
 organization_body_title=Description of the organization
 tags_title=Tags
-tags_instructional=Select tags that best describe this case.
 tags_placeholder=Enter one or more tags
 unknown_title_label=Unknown
 unknown_title_instructional=Unknown
