--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -723,7 +723,11 @@ kind_of_influence_placeholder=Select kind of influence
 communication_with_audience=Communication with audience
 communication_with_audience_instructional=Select a communication with audience
 decision_method=Decision method
-decision_method_instructional=Select a decision method
+decision_method_instructional=How are decisions typically made? 
+decision_method_placeholder=Select decision method
+decision_method_method=Decision Method
+decision_method_method_instructional=How are decisions typically made? 
+decision_methods_placeholder=How were group decisions made?
 face_to_face_online_or_both=Face-to-face, online or both
 facetoface_online_or_both_instructional=Did participants interact face-to-face, online, or both?
 facetoface_online_or_both_placeholder=Was interaction face-to-face or online?
@@ -731,13 +735,17 @@ facilitated=Facilitated
 communication_mode=Communication Mode
 communication_mode_instructional=What is the primary purpose of communication within the process? 
 communication_mode_placeholder=Select communication mode
-governance_contribution=Governance contribution
+governance_contribution=Governance Contribution
+governance_contribution_placeholder=Select governance contribution
 typical_funding_source=Typical funding source
 typical_funding_source_instructional=Select typical funding source
 typical_sponsoring_entity=Type of sponsoring entity
-typical_sponsoring_entity_instructional=Select type of sponsoring entity
+typical_sponsoring_entity_instructional=What kind of entity typically sponsors the process?
+typical_sponsoring_entity_placeholder=Select sponsoring entity
 typical_implementing_entity=Type of implementing entity
-typical_implementing_entity_instructional=Select type of implementing entity
+typical_implementing_entity_instructional=What kind of entity typically designs and implements the process?
+typical_implementing_entity_placeholder=Select type of implementing entity
+other_info=Other Info
 #Organization.js
 sector=Sector
 sector_instructional=Select Sector
@@ -1238,6 +1246,16 @@ random_selection=Random selection
 no_interaction_among_participants=No interaction among participants
 discussion_dialogue_or_deliberation=Discussion, dialogue or deliberation
 negotiate_bargain=Negotiate & bargain
+geographical_scope=Geographical Scope 
+geographical_scope_instructional=What is the typical geographic reach of the method?
+geographical_scope_placeholder=Select geographic scope
+local_eg_neighbourhood_city_town_metropolitan_area=Local (e.g. Neighbourhood, City/Town, Metropolitan Area)
+regional_eg_state_province_autonomous_region=Regional (e.g. State, Province, Autonomous Region)
+national=National
+international=International
+governance_contribution_method_instructional=What is the primary governance contributions of the method?
+
+
 ##OrganizationEditor.js
 organization_title_label=Title of Organization
 organization_title_instructional=Enter title
@@ -1248,21 +1266,27 @@ unknown_title_label=Unknown
 unknown_title_instructional=Unknown
 unknown_body_title=Unknown
 best_for=Best for
-best_for_instructional=Select Best for
-governance_contribution=Governance contribution
+best_for_instructional=What is this method best used to accomplish?
+best_for_placeholder=Select best use
 governance_contribution_instructional=Select Governance contribution
-issue_interdependency=Issue interdependency
-issue_interdependency_instructional=Select Issue interdependency
-issue_polarization=Issue polarization
-issue_polarization_instructional=Select Issue polarization
-issue_technical_complexity=Issue technical complexity
-issue_technical_complexity_instructional=Select Issue technical complexity
-method_of_interaction=Method of interaction
-method_of_interaction_instructional=Select Method of interaction
-public_interaction_method=Public interaction method
+issue_interdependency=Issue Interdependency
+issue_interdependency_instructional=What level of issue interdependency can the method handle?
+issue_interdependency_placeholder=Select Issue interdependency
+issue_polarization=Issue Polarization
+issue_polarization_instructional=What level of issue polarization can the method handle? 
+issue_polarization_placeholder=Select Issue polarization
+issue_technical_complexity=Issue Technical Complexity
+issue_technical_complexity_instructional=What level of technical complexity can the method handle? 
+issue_technical_complexity_placeholder=Select Issue technical complexity
+method_of_interaction=Method of Interaction
+method_of_interaction_instructional=How are processes and their results communicated to broader publics? 
+method_of_interaction_placeholder=Select public interaction method
+public_interaction_method=Public Interaction Method
 public_interaction_method_instructional=Select Public interaction method
+public_interaction_method_placeholder=Select public interaction method
 typical_funding_source=Typical funding source
-typical_funding_source_instructional=Select Typical funding source
+typical_funding_source_instructional=What kind of entity typically funds the process?
+typical_funding_source_placeholder=Select funding entity
 achieving_public_goods=Achieving Public Goods
 achieving_public_goods_instructional=Select Achieving Public Goods
 addressing_identitybased_issues=Addressing Identity-Based Issues
