updated quick-submit for method

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -1204,7 +1204,9 @@ case_title_explanatory=Give this public participation project or event a descrip
 case_title_placeholder=Enter title in 10 words or less.
 case_body_title=Case Description/Narrative
 tags_instructional_case=Select tags that best describe this case.
-##MethodEditor.js
+###########################
+######MethodEditor.js######
+###########################
 method_title_label=Title of Method
 method_title_explanatory=Give this method a descriptive title in 10 words or less.
 method_body_title=Method Description / Narrative
@@ -1254,9 +1256,10 @@ regional_eg_state_province_autonomous_region=Regional (e.g. State, Province, Aut
 national=National
 international=International
 governance_contribution_method_instructional=What is the primary governance contributions of the method?
-
-
-##OrganizationEditor.js
+links_placeholder_method=Add a link
+###########################
+###OrganizationEditor.js###
+###########################
 organization_title_label=Title of Organization
 organization_title_instructional=Enter title
 organization_body_title=Description of the organization
