updated some case fields

--- a/locales/en/messages.properties
+++ b/locales/en/messages.properties
@@ -695,6 +695,8 @@ videos_instructional_method=Add a video link from Vimeo or YouTube.
 videos_placeholder_case=Add a video link (Vimeo or YouTube)
 videos_placeholder_method=Add a video link (Vimeo or YouTube)
 links_instructional=If there is a main website for this case, enter it here. Add links to additional sources so that readers and editors can find more information about this case online. 
+links_instructional_case=If there is a main website for this case, enter it here. Add links to additional sources so that readers and editors can find more information about this case online. 
+links_placeholder_case=Add a link
 links_instructional_1=Enter a link and press +
 targeted_participant_demographic=Targeted participant demographic
 targeted_participant_demographic_instructional=Select targeted participant demographic
